# cpu

./: .gitignore  Makefile  README.md  data.mem  mem_dump.txt  program.mem  sim.out
asm/: BasicArithmetic.asm  ConditionalBranchFail.asm  ConditionalBranchPass.asm  ImmediateAddLoop.asm  LoadAndStore.asm  LoopCounter.asm  MemoryCopy.asm  README.md  RegisterFillTest.asm  ValueSwap.asm  ZeroRegisterProtection.asm  test.asm
assembler_compiler/: README.md  main.py  pyproject.toml  test.s  test_data.mem  test_program.mem
assembler_compiler/transformer/: __init__.py  parser.py  transformer.py
mem/: data.mem  program.mem
rtl/: README.md  alu.v  control.v  cpu.v  cpu.vcd  dmem.v  imem.v  regfile.v
testbench/: README.md  tb_cpu.v
tools/: README.md
